--- a/src/laser_value/package.xml
+++ b/src/laser_value/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>prova_laser</name>
+  <name>laser_value</name>
   <version>0.0.0</version>
-  <description>The prova_laser package</description>
+  <description>The laser_value package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="alessandro@todo.todo">alessandro</maintainer>
+  <maintainer email="student@todo.todo">student</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/prova_laser</url> -->
+  <!-- <url type="website">http://wiki.ros.org/laser_value</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
