--- a/src/packages/turtlebot3_navigation/param/base_local_planner_params.yaml
+++ b/src/packages/turtlebot3_navigation/param/base_local_planner_params.yaml
@@ -1,14 +1,13 @@
 TrajectoryPlannerROS:
-
 # Robot Configuration Parameters
-  max_vel_x: 0.18
+  max_vel_x: 0.15 # 0.18
   min_vel_x: 0.08
 
   max_vel_theta:  1.0
   min_vel_theta: -1.0
   min_in_place_vel_theta: 1.0
 
-  acc_lim_x: 1.0
+  acc_lim_x: 0.8 # 0.10
   acc_lim_y: 0.0
   acc_lim_theta: 0.6
 
