--- a/src/packages/turtlebot3_navigation/param/move_base_params.yaml
+++ b/src/packages/turtlebot3_navigation/param/move_base_params.yaml
@@ -1,4 +1,4 @@
-shutdown_costmaps: false
+shutdown_costmaps: false # false
 controller_frequency: 10.0
 planner_patience: 5.0
 controller_patience: 15.0
