--- a/src/fourth_task/package.xml
+++ b/src/fourth_task/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>laser_value</name>
+  <name>fourth_task</name>
   <version>0.0.0</version>
-  <description>The laser_value package</description>
+  <description>fourth task package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
